src/OpenGl/OpenGl_Context.hxx
@@ -136,6 +136,10 @@ template<typename theBaseClass_t> struct OpenGl_TmplCore45;
 typedef OpenGl_TmplCore45<OpenGl_GlCore44Back> OpenGl_GlCore45Back;
 typedef OpenGl_TmplCore45<OpenGl_GlCore44>     OpenGl_GlCore45;
 
+template<typename theBaseClass_t> struct OpenGl_TmplCore46;
+typedef OpenGl_TmplCore46<OpenGl_GlCore45Back> OpenGl_GlCore46Back;
+typedef OpenGl_TmplCore46<OpenGl_GlCore45>     OpenGl_GlCore46;
+
 class Graphic3d_Camera;
 class Graphic3d_PresentationAttributes;
 class OpenGl_Aspects;
@@ -1073,6 +1077,8 @@ public: //! @name core profiles
   OpenGl_GlCore44Back* core44back; //!< OpenGL 4.4 backward compatibility profile
   OpenGl_GlCore45*     core45;     //!< OpenGL 4.5 core profile
   OpenGl_GlCore45Back* core45back; //!< OpenGL 4.5 backward compatibility profile
+  OpenGl_GlCore46*     core46;     //!< OpenGL 4.6 core profile
+  OpenGl_GlCore46Back* core46back; //!< OpenGL 4.6 backward compatibility profile
 
   Handle(OpenGl_Caps) caps; //!< context options
 
